fixed clientid spacing (req by ot)
svn path=/ZMS/trunk/; revision=3057

--- a/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -287,7 +287,7 @@ ul.portalClients.zmi-container .zmi-item .portalClient div.ZMS {
  	position:absolute;
 }
 ul.portalClients.zmi-container .zmi-item .portalClient div.ZMS h1 {
-	padding-top:.35em;
+	padding:.35em 0 0 1em;
 	font-size: large;
 	margin-top: 0;
 }
